src/components/ScrollContainer.scss
.shadow {
  box-shadow: none;
  content: '';
  display: block;
  top: 0px;
  left: 0px;
  bottom: 0px;
  right: 0px;
  pointer-events: none;
  position: absolute;
  z-index: 20000; // TODO test
}

$r: 8px;
$color: rgba(0, 0, 0, 0.25);

$left:  $r 0 $r (-$r) $color inset;
$right: (-$r) 0 $r (-$r) $color inset;
$top:  0 $r $r (-$r) $color inset;
$bottom: 0 (-$r) $r (-$r) $color inset;


.overflow-right .shadow { box-shadow: $right; }
.overflow-left .shadow { box-shadow: $left; }
.overflow-left.overflow-right .shadow { box-shadow: $left, $right; }
.overflow-bottom .shadow { box-shadow: $bottom; }
.overflow-bottom.overflow-right .shadow { box-shadow: $bottom, $right; }
.overflow-bottom.overflow-left .shadow { box-shadow: $bottom, $left; }
.overflow-bottom.overflow-left.overflow-right .shadow { box-shadow: $bottom, $left, $right; }
.overflow-top .shadow { box-shadow: $top; }
.overflow-top.overflow-right .shadow { box-shadow: $top, $right; }
.overflow-top.overflow-left .shadow { box-shadow: $top, $left; }
.overflow-top.overflow-left.overflow-right .shadow { box-shadow: $top, $left, $right; }
.overflow-top.overflow-bottom .shadow { box-shadow: $top, $bottom; }
.overflow-top.overflow-bottom.overflow-right .shadow { box-shadow: $top, $right; }
.overflow-top.overflow-bottom.overflow-left .shadow { box-shadow: $top, $bottom, $left; }
.overflow-top.overflow-bottom.overflow-left.overflow-right .shadow { box-shadow: $top, $left, $right, $bottom; }

